k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clay
  namespace: clay
spec:
  selector:
    app: clay
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
